--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "easycorp/easyadmin-bundle": "2.3.4",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
@@ -64,7 +65,8 @@
         ]
     },
     "conflict": {
-        "symfony/symfony": "*"
+        "symfony/symfony": "*",
+        "doctrine/common": ">= 3.0"
     },
     "extra": {
         "symfony": {
